syntax = "proto3";

package listing.service;

option java_package = "com.bondgraine.listingmicroservice.grpc";
option java_multiple_files = true;

message BuyPostRequest {
  string post_id = 1;
}